# pulse

./: .dockerignore  .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile.ubi  LICENSE  README.md  docker-compose.yml  flake.nix  pulse.xml
.github/workflows/: ci.yml
assets/: service-worker.js
assets/shared-assets/shared-rust/shared-backend/: Cargo.toml
assets/shared-assets/shared-rust/shared-core/: Cargo.toml
assets/shared-assets/shared-rust/shared-frontend/: Cargo.toml
backend/: Cargo.toml
backend/src/: config.rs  cookie_auth.rs  main.rs  middleware.rs  state.rs
backend/src/routes/: stats.rs
backend/src/routes/auth/: logout.rs  mod.rs  pin_required.rs  verify_pin.rs
backend/src/services/: gpu.rs  mod.rs  monitor.rs
backend/src/services/gpu/: amd.rs  intel.rs  mod.rs  nvidia.rs
backend/src/tests/: routes.rs
backend/tests/: container_smoke.rs
frontend/: Cargo.toml  index.html
frontend/Assets/: service-worker.js  styles.css
frontend/src/: app.rs  i18n.rs  main.rs  storage.rs  types.rs
frontend/src/app/: login.rs  update.rs  update_handlers.rs  view.rs  view_cards.rs  view_sys_info.rs  view_sys_info_art.rs  ws.rs
