[package]
name = "pulse-backend"
version = "1.3.6"
edition = "2024"
authors = ["UberMetroid"]
license = "Apache-2.0"
repository = "https://github.com/UberMetroid/pulse"
homepage = "https://github.com/UberMetroid/pulse"
description = "Axum backend service for Pulse."
readme = "../README.md"

[dependencies]
shared-core = { git = "https://github.com/UberMetroid/shared-assets.git", tag = "v3.0.5" }
shared-backend = { git = "https://github.com/UberMetroid/shared-assets.git", tag = "v3.0.5" }
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "net", "time", "sync", "io-util"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
constant_time_eq = "0.3"
sysinfo = "0.30"
ipnet = "2.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.11"
